# lightweight-rag

./: .coverage  .coveragerc  .gitignore  ANALYSIS_SUMMARY.md  INSTALL.md  LICENSE  MODULE_USAGE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  config.yaml  coverage.json  lightweight-rag.py  package.json  pyproject.toml  pytest.ini  rag.py  requirements-dev.txt  requirements.txt  test-config.yaml  validate_module.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
.rag_cache/: dois.json  manifest.json  warmup_diagnostics.json
.test_cache/: dois.json  manifest.json
docs/: CODE_QUALITY_CHECKLIST.md  CODE_QUALITY_REPORT.md  MODULE_STATUS.md  PDF_TEXT_QUALITY.md  PDF_TEXT_QUALITY_ENHANCED.md  README_CODE_QUALITY.md  SEMANTIC_RERANKING_PERFORMANCE.md
examples/: module_usage_example.py  nodejs_integration.js
lightweight_rag/: __init__.py  __init__.py,cover  cite.py  cite.py,cover  cli.py  cli.py,cover  cli_subprocess.py  cli_subprocess.py,cover  config.py  config.py,cover  diversity.py  diversity.py,cover  environment.py  environment.py,cover  fusion.py  fusion.py,cover  index.py  index.py,cover  io_biblio.py  io_biblio.py,cover  io_pdf.py  io_pdf.py,cover  llm.py  main.py  main.py,cover  models.py  models.py,cover  performance.py  performance.py,cover  prf.py  prf.py,cover  rerank.py  rerank.py,cover  scoring.py  scoring.py,cover  semantic_index.py  subprocess_interface.py  subprocess_interface.py,cover
scripts/: check_quality.py
tests/: conftest.py  test_biblio_integration.py  test_caching.py  test_citation_enrichment.py  test_cite_coverage.py  test_confidence.py  test_config.py  test_core_functions.py  test_diversity.py  test_environment_coverage.py  test_fusion.py  test_incremental_caching.py  test_index.py  test_integration.py  test_io_pdf.py  test_known_doi.py  test_llm_cache.py  test_module_usage.py  test_performance.py  test_pipeline_contracts.py  test_rerank.py  test_semantic_index.py  test_summary_pipeline.py  test_text_quality.py
