[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-rag"
version = "0.1.0"
authors = [
    {name = "Lightweight RAG Contributors"},
]
description = "A fast, minimal PDF → BM25 → top-k retrieval system with smart caching, query expansion, and academic citations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "PyMuPDF>=1.23.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "rank-bm25>=0.2.2,<1.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "PyYAML>=6.0,<8.0",
]

[project.optional-dependencies]
semantic = [
    "numpy>=1.24.0,<3.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/socratic-irony/lightweight-rag"
"Bug Reports" = "https://github.com/socratic-irony/lightweight-rag/issues"
"Source" = "https://github.com/socratic-irony/lightweight-rag"

[project.scripts]
lightweight-rag = "lightweight_rag.cli_subprocess:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightweight_rag*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]